@@ -1169,7 +1169,7 @@ TclWinCPUID( unsigned int index, /* Which CPUID value to retrieve */
 #  endif
 
 
-#elif defined(_MSC_VER)
+#elif defined(_MSC_VER) && !defined(_WIN64)
 
     /* Define a structure in the stack frame to hold the registers */
 
@@ -1212,7 +1212,7 @@ TclWinCPUID( unsigned int index, /* Which CPUID value to retrieve */
 
 #else
 				/* Don't know how to do assembly code for
-				 * this compiler */
+				 * this compiler and/or architecture */
 #endif
     return status;
 }
