@@ -377,7 +377,7 @@ DdeSetServerName(
 
     riPtr = (RegisteredInterp *) ckalloc(sizeof(RegisteredInterp));
     riPtr->interp = interp;
-    riPtr->name = ckalloc(strlen(actualName) + 1);
+    riPtr->name = ckalloc((unsigned int) strlen(actualName) + 1);
     riPtr->nextPtr = tsdPtr->interpListPtr;
     riPtr->handlerPtr = handlerPtr;
     if (riPtr->handlerPtr != NULL)
@@ -961,14 +961,18 @@ DdeCreateClient(ddeEnumServices *es)
 LRESULT CALLBACK
 DdeClientWindowProc(HWND hwnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
-    LONG lr = 0L;
+    LRESULT lr = 0L;
 
     switch (uMsg) {
 	case WM_CREATE: {
 	    LPCREATESTRUCT lpcs = (LPCREATESTRUCT)lParam;
 	    ddeEnumServices *es;
 	    es = (ddeEnumServices*)lpcs->lpCreateParams;
+#ifdef _WIN64
+	    SetWindowLongPtr(hwnd, GWLP_USERDATA, (long)es);
+#else
 	    SetWindowLong(hwnd, GWL_USERDATA, (long)es);
+#endif
 	    break;
 	}
 	case WM_DDE_ACK:
@@ -988,8 +992,12 @@ DdeServicesOnAck(HWND hwnd, WPARAM wParam, LPARAM lParam)
     ATOM topic = (ATOM)HIWORD(lParam);
     ddeEnumServices *es;
     TCHAR sz[255];
-    
+
+#ifdef _WIN64
+    es = (ddeEnumServices *)GetWindowLongPtr(hwnd, GWLP_USERDATA);
+#else
     es = (ddeEnumServices *)GetWindowLong(hwnd, GWL_USERDATA);
+#endif
 
     if ((es->service == (ATOM)NULL || es->service == service)
 	&& (es->topic == (ATOM)NULL || es->topic == topic)) {
@@ -1021,7 +1029,7 @@ DdeServicesOnAck(HWND hwnd, WPARAM wParam, LPARAM lParam)
 static BOOL CALLBACK
 DdeEnumWindowsCallback(HWND hwndTarget, LPARAM lParam)
 {
-    DWORD dwResult = 0;
+    LRESULT dwResult = 0;
     ddeEnumServices *es = (ddeEnumServices *)lParam;
     SendMessageTimeout(hwndTarget, WM_DDE_INITIATE,
 		       (WPARAM)es->hwnd,
