@@ -1408,7 +1408,7 @@ BroadcastValue(
     int objc,			/* Number of arguments. */
     Tcl_Obj * CONST objv[])	/* Argument values. */
 {
-    DWORD result, sendResult;
+    LRESULT result, sendResult;
     UINT timeout = 3000;
     int len;
     char *str;
@@ -1442,8 +1442,8 @@ BroadcastValue(
 	    (WPARAM) 0, (LPARAM) str, SMTO_ABORTIFHUNG, timeout, &sendResult);
 
     objPtr = Tcl_NewObj();
-    Tcl_ListObjAppendElement(NULL, objPtr, Tcl_NewIntObj((int) result));
-    Tcl_ListObjAppendElement(NULL, objPtr, Tcl_NewIntObj((int) sendResult));
+    Tcl_ListObjAppendElement(NULL, objPtr, Tcl_NewLongObj((long) result));
+    Tcl_ListObjAppendElement(NULL, objPtr, Tcl_NewLongObj((long) sendResult));
     Tcl_SetObjResult(interp, objPtr);
 
     return TCL_OK;
